@@ -1,3 +1,6 @@
+Fri Jan 26 2018 Aleksey
+	* configuration script
+
 Mon Sep  4 2017 Aleksey
 	* Bugfix: broken binary hash output
 
